tests/snapshots/examples_fixtures/suggestions__test_suggestions.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/test_suggestions.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `coun`.

  --> examples/suggestions/test_suggestions.flx:8:7
  |
8 | print(coun);
  |       ^^^^

Hint:
  Define it first: let coun = ...;


Help:
  Did you mean one of: `count`, `counter`, `join`?
== stdout ==
<not executed>
